plugins {
    id 'fabric-loom' version '1.7-SNAPSHOT'
    id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

repositories {
    maven { url "https://maven.isxander.dev/releases" }
    maven { url "https://api.modrinth.com/maven" }
}


// FORCE SYSTEM-WIDE RESOLUTION BLOCK
// This forces any worker process spawned by Gradle/Loom to pull the WebP library
configurations.configureEach {
    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
        if (details.requested.group == 'com.twelvemonkeys.imageio') {
            details.useVersion '3.12.0'
        }
    }
}

loom {
    splitEnvironmentSourceSets()
    runs {
        client {
            vmArg "-Dsun.io.useCanonCaches=false"
            // Defensive bypass: Stops the headless AWT system from executing broken local host SPI scans
            vmArg "-Djava.awt.headless=true"
        }
    }
    mods {
        "localweather" {
            sourceSet sourceSets.main
            sourceSet sourceSets.client
        }
    }
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

    modRuntimeOnly "dev.isxander:yet-another-config-lib:3.6.4+1.20.1-fabric"
    modRuntimeOnly "maven.modrinth:modmenu:7.2.1"

    // Fallback direct attachments
    implementation 'com.twelvemonkeys.imageio:imageio-webp:3.12.0'
    runtimeOnly 'com.twelvemonkeys.imageio:imageio-webp:3.12.0'
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 17
}

java {
    withSourcesJar()
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.archivesName}" }
    }
}